// Vitest Snapshot v1

exports[`CharClass > Content > can be empty 1`] = `
{
  "body": {
    "end": 2,
    "expressions": [],
    "kind": 22,
    "negative": false,
    "start": 1,
  },
  "end": 3,
  "flags": "",
  "kind": 0,
  "start": 0,
}
`;

exports[`CharClass > Content > should be quantifiable 1`] = `
{
  "body": {
    "end": 4,
    "expression": {
      "end": 3,
      "expressions": [
        {
          "charCode": 97,
          "end": 2,
          "kind": 6,
          "start": 2,
          "type": "simple",
          "value": "a",
        },
      ],
      "kind": 22,
      "negative": false,
      "start": 1,
    },
    "kind": 27,
    "quantifier": {
      "end": 4,
      "greedy": true,
      "kind": 26,
      "start": 4,
      "type": 2,
    },
    "start": 1,
  },
  "end": 5,
  "flags": "",
  "kind": 0,
  "start": 0,
}
`;

exports[`CharClass > Content > should be quantifiable 2`] = `
{
  "body": {
    "end": 6,
    "expression": {
      "end": 3,
      "expressions": [
        {
          "charCode": 97,
          "end": 2,
          "kind": 6,
          "start": 2,
          "type": "simple",
          "value": "a",
        },
      ],
      "kind": 22,
      "negative": false,
      "start": 1,
    },
    "kind": 27,
    "quantifier": {
      "end": 6,
      "from": 1,
      "greedy": true,
      "kind": 26,
      "start": 4,
      "to": undefined,
      "type": 3,
    },
    "start": 1,
  },
  "end": 7,
  "flags": "",
  "kind": 0,
  "start": 0,
}
`;

exports[`CharClass > Content > should correctly parse char 1`] = `
{
  "body": {
    "end": 3,
    "expressions": [
      {
        "charCode": 97,
        "end": 2,
        "kind": 6,
        "start": 2,
        "type": "simple",
        "value": "a",
      },
    ],
    "kind": 22,
    "negative": false,
    "start": 1,
  },
  "end": 4,
  "flags": "",
  "kind": 0,
  "start": 0,
}
`;

exports[`CharClass > Content > should correctly parse char range 1`] = `
{
  "body": {
    "end": 5,
    "expressions": [
      {
        "end": 4,
        "from": {
          "charCode": 97,
          "end": 2,
          "kind": 6,
          "start": 2,
          "type": "simple",
          "value": "a",
        },
        "kind": 4,
        "start": 2,
        "to": {
          "charCode": 122,
          "end": 4,
          "kind": 6,
          "start": 4,
          "type": "simple",
          "value": "z",
        },
      },
    ],
    "kind": 22,
    "negative": false,
    "start": 1,
  },
  "end": 6,
  "flags": "",
  "kind": 0,
  "start": 0,
}
`;

exports[`CharClass > should correctly parse if there are two open brackets 1`] = `
{
  "body": {
    "end": 5,
    "expressions": [
      {
        "charCode": 91,
        "end": 2,
        "kind": 6,
        "start": 2,
        "type": "simple",
        "value": "[",
      },
      {
        "charCode": 97,
        "end": 3,
        "kind": 6,
        "start": 3,
        "type": "simple",
        "value": "a",
      },
      {
        "charCode": 98,
        "end": 4,
        "kind": 6,
        "start": 4,
        "type": "simple",
        "value": "b",
      },
    ],
    "kind": 22,
    "negative": false,
    "start": 1,
  },
  "end": 6,
  "flags": "",
  "kind": 0,
  "start": 0,
}
`;

exports[`CharClass > should correctly parse simple char class 1`] = `
{
  "body": {
    "end": 3,
    "expressions": [
      {
        "charCode": 97,
        "end": 2,
        "kind": 6,
        "start": 2,
        "type": "simple",
        "value": "a",
      },
    ],
    "kind": 22,
    "negative": false,
    "start": 1,
  },
  "end": 4,
  "flags": "",
  "kind": 0,
  "start": 0,
}
`;
